# msai-v2

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTINUITY.md  Caddyfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  playwright.config.ts
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1e2d728f1b32_add_hidden_from_inventory_to_instrument_.py  a5b6c7d8e9f0_add_source_venue_raw_to_instrument_aliases.py  a5y6z7a8b9c0_add_smoke_to_backtests.py  aa00b11c22d3_parquet_partition_index.py  b6a7b8c9d0e1_backdate_time_invariant_aliases.py  b6c7d8e9f0a1_relax_effective_window_check_for_same_day_rotations.py  c1d2e3f4a5b6_live_deployments_stable_identity.py  c7d8e9f0a1b2_add_symbol_onboarding_runs.py  c7d8e9f1a2b3_add_strategy_deleted_at.py  d1e2f3g4h5i6_add_trading_hours_to_instrument_definitions.py  e2f3g4h5i6j7_drop_instrument_cache.py  e3f4a5b6c7d8_order_audits_xor_constraint.py  g5a6b7c8d9e0_add_backtest_lifecycle_fields.py  j8d9e0f1g2h3_add_lineage_fields_to_backtests.py  l0f1g2h3i4j5_portfolio_orchestration_columns.py  n2h3i4j5k6l7_fix_message_bus_stream_separator.py  p4k5l6m7n8o9_add_weight_check_to_revision_strategies.py  q5l6m7n8o9p0_add_portfolio_revision_id_to_live_deployments.py  r6m7n8o9p0q1_backfill_legacy_deployments_as_portfolios.py  w1r2s3t4u5v6_add_config_schema_status_and_code_hash.py  x2r3s4t5u6v7_add_backtest_error_classification.py  y3s4t5u6v7w8_add_backtest_auto_heal_columns.py  z4x5y6z7a8b9_add_backtest_series_columns.py
backend/scripts/: build_partition_index.py  preflight_cache_migration.py
backend/src/msai/: cli.py  cli_symbols.py  main.py
backend/src/msai/api/: _common.py  account.py  alerts.py  asset_universe.py  auth.py  backtests.py  graduation.py  instruments.py  live.py  live_deps.py  market_data.py  portfolio.py  portfolios.py  research.py  strategies.py  strategy_templates.py  symbol_onboarding.py  system.py  websocket.py
backend/src/msai/core/: auth.py  config.py  data_integrity.py  database.py  logging.py  queue.py  secrets.py  soft_delete.py
backend/src/msai/live_supervisor/: __main__.py  heartbeat_monitor.py  main.py  process_manager.py
backend/src/msai/models/: __init__.py  asset_universe.py  audit_log.py  backtest.py  graduation_candidate.py  graduation_stage_transition.py  instrument_alias.py  instrument_cache.py  instrument_definition.py  live_deployment.py  live_portfolio.py  parquet_partition_index.py  portfolio.py  portfolio_allocation.py  portfolio_run.py  research_job.py  research_trial.py  strategy.py  strategy_daily_pnl.py  symbol_onboarding_run.py  trade.py  user.py
backend/src/msai/schemas/: alert.py  backtest.py  common.py  instrument_bootstrap.py  live.py  market_data.py  portfolio.py  strategy.py  symbol_onboarding.py
backend/src/msai/services/: alerting.py  analytics_math.py  asset_universe.py  compute_slots.py  data_ingestion.py  graduation.py  ib_account.py  ib_account_snapshot.py  ib_probe.py  job_watchdog.py  live_command_bus.py  market_data_query.py  parquet_store.py  portfolio_service.py  report_generator.py  report_signer.py  research_engine.py  risk_engine.py  strategy_governance.py  (+3 more)
backend/tests/: conftest.py
backend/tests/e2e/: test_instruments_refresh_ib_smoke.py  test_live_streaming_phase3.py  test_live_trading_phase1.py  test_recovery_phase4.py  test_security_master_phase2.py
backend/tests/integration/: _alembic_subprocess.py  _deployment_factory.py  conftest_databento.py  conftest_symbol_onboarding.py  test_alembic_migrations.py  test_api_instruments_bootstrap.py  test_backtest_job_auto_heal.py  test_backtest_live_parity.py  test_backtests_api.py  test_backtests_api_uses_registry.py  test_cache_redis_instrument_roundtrip.py  test_graduation_flow.py  test_ib_account_snapshot.py  test_ib_account_snapshot_boot.py  test_idempotency_store.py  test_instrument_cache_migration.py  test_instrument_cache_model.py  test_instrument_definition_crud.py  test_instrument_registry.py  test_live_command_bus.py  test_live_command_bus_dlq.py  test_live_start_endpoints.py  test_migrate_catalog.py  test_models.py  test_parity_config_roundtrip.py  test_parity_determinism.py  test_portfolio_deploy_cycle.py  test_portfolio_full_lifecycle.py  test_portfolio_job_orchestration.py  test_portfolio_service.py  test_process_manager.py  test_registry_venue_divergence.py  test_revision_service.py  test_security_master.py  test_security_master_advisory_lock.py  test_security_master_databento_bootstrap.py  test_security_master_resolve_backtest.py  test_security_master_resolve_live.py  test_strategy_soft_delete_live_path.py  test_system_health.py
backend/tests/unit/: conftest.py  test_account_api.py  test_account_probe_lifecycle.py  test_alerting.py  test_alerting_service.py  test_analytics_math.py  test_asset_universe.py  test_audit.py  test_auth_optional.py  test_backtest_classifier.py  test_backtest_failure_code.py  test_backtest_fixtures.py  test_backtest_job.py  test_backtest_lifecycle_fields.py  test_backtest_mark_failed.py  test_backtest_metrics_extraction.py  test_backtest_model.py  test_backtest_sanitize.py  test_backtest_schemas.py  test_backtests_api.py  test_cli.py  test_cli_completeness.py  test_cli_instruments_bootstrap.py  test_cli_instruments_refresh.py  test_cli_live_portfolio.py  test_compose_prod_ib_port.py  test_config_report_secret.py  test_continuous_futures_helpers.py  test_data_integrity.py  test_databento_client.py  test_databento_client_ambiguity.py  test_databento_client_retry.py  test_databento_fetch_definition.py  test_deployment_identity_portfolio.py  test_ema_cross_save_load_roundtrip.py  test_endpoint_outcome.py  test_failure_isolated_strategy.py  test_failure_kind.py  test_flatness_drain.py  test_flatness_service.py  (+56 more)
claude-version/backend/: .dockerignore  Dockerfile.dev  pyproject.toml
claude-version/backend/tests/: conftest.py
codex-version/backend/: Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
codex-version/backend/alembic/: env.py
codex-version/backend/tests/: conftest.py
(+995 files in other folders)
