[project]
name = "msai"
version = "0.1.0"
description = "MSAI v2 - Personal Hedge Fund Platform"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.133.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "duckdb>=1.4.0",
    "pyarrow>=22.0.0",
    "pandas>=2.2.0",
    "PyJWT[crypto]>=2.9.0",
    "cryptography>=43.0.0",
    "httpx>=0.28.0",
    "arq>=0.26.0",
    "redis>=5.2.0",
    # Phase 1 task 1.4 needs the Interactive Brokers extras (ibapi /
    # nautilus-ibapi) so we can build a real
    # InteractiveBrokersInstrumentProviderConfig instead of the v0
    # TestInstrumentProvider stub. Pinned via the [ib] extra so a
    # fresh `uv sync` always pulls the matching ibapi version.
    "nautilus_trader[ib]>=1.222.0",
    "quantstats>=0.0.81",
    "ib_async>=1.0.0",
    "databento>=0.43.0",
    "structlog>=24.4.0",
    "typer>=0.15.0",
    "optuna>=4.4.0",
    "jinja2>=3.0",
    "tenacity>=9.1.0,<10",
    "pyyaml>=6.0.2,<7",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "testcontainers[postgres,redis]>=4.9.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "freezegun>=1.5.0",
    "fakeredis[lua]>=2.20",
]
azure = [
    "azure-identity>=1.19.0",
    "azure-keyvault-secrets>=4.9.0",
]

[project.scripts]
msai = "msai.cli:app"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

# TC001/TC002/TC003 move imports into `if TYPE_CHECKING:` blocks, which
# breaks frameworks that evaluate annotations at runtime via get_type_hints().
# Disabled in the directories where we rely on that: SQLAlchemy 2.0
# `Mapped[...]` (models/), Pydantic field inspection (schemas/), FastAPI
# path-param + Depends() resolution (api/), and their close-adjacent helpers
# (core/database.py, core/auth.py).
[tool.ruff.lint.per-file-ignores]
"src/msai/models/*.py" = ["TC001", "TC002", "TC003"]
"src/msai/schemas/*.py" = ["TC001", "TC002", "TC003"]
"src/msai/api/*.py" = ["TC001", "TC002", "TC003"]
"src/msai/services/symbol_onboarding/*.py" = ["TC003"]
"src/msai/core/auth.py" = ["TC003"]
"src/msai/core/database.py" = ["TC003"]
"src/msai/cli*.py" = ["TC003", "B008"]
"tests/unit/services/symbol_onboarding/*.py" = ["TC003"]
"tests/unit/cli/*.py" = ["TC003"]

# Belt-and-suspenders against the structural-guard test in
# tests/unit/structure/test_canonical_instrument_id_runtime_isolation.py.
# The AST walker is the source of truth; this catches imports earlier in
# the dev loop with a clear remediation pointer.
[tool.ruff.lint.flake8-tidy-imports.banned-api]
"msai.models.instrument_cache" = { msg = "Use msai.models.{InstrumentDefinition, InstrumentAlias} — the registry is the single source of truth for instrument metadata." }
"msai.services.nautilus.live_instrument_bootstrap.canonical_instrument_id" = { msg = "Use live_resolver.lookup_for_live(...) for runtime resolution, or the per-asset-class IBContract factories at cli.py:_build_ib_contract_for_symbol for IB seeding." }
"msai.services.nautilus.instruments.canonical_instrument_id" = { msg = "Use resolve_instrument(symbol, venue=...).id directly." }
"msai.services.nautilus.security_master.service.SecurityMaster.resolve_for_live" = { msg = "Use live_resolver.lookup_for_live(...) directly. live_supervisor/__main__.py is the canonical caller." }

[tool.mypy]
python_version = "3.12"
strict = true
# Stale `# type: ignore` comments accumulate as library stubs improve — we
# re-enable this once the existing backlog is cleaned up in a dedicated PR.
warn_unused_ignores = false

# Third-party libraries without published stubs. Treat their APIs as Any.
[[tool.mypy.overrides]]
module = [
    "nautilus_trader.*",
    "databento.*",
    "databento_dbn.*",
    "polygon.*",
    "ib_async.*",
    "ib_insync.*",
    "arq.*",
    "quantstats.*",
    "pandas.*",
    "pyarrow.*",
    "duckdb.*",
    "structlog.*",
    "msal.*",
    "redis.*",
    "azure.*",
    "sklearn.*",
    "testcontainers.*",
    "yaml.*",
    "dateutil.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "ib_paper: opt-in test that requires a running paper IB Gateway (set RUN_PAPER_E2E=1)",
]
